--- a/MC1-DailyTImer/Session/Session.storyboard
+++ b/MC1-DailyTImer/Session/Session.storyboard
@@ -10,7 +10,6 @@
         <!--Session-->
         <scene sceneID="23g-gs-KQd">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tAw-0o-iDD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="8Zq-XZ-Vqa" customClass="Session" customModule="MC1_DailyTImer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="iMT-Ar-d4R">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -23,22 +22,30 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oby-zJ-xN2">
+                                <rect key="frame" x="167" y="547" width="84" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="End Session"/>
+                                <connections>
+                                    <action selector="ToEndSession:" destination="8Zq-XZ-Vqa" eventType="touchUpInside" id="lTe-pf-K8b"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="RlH-w2-hkr"/>
                     </view>
                     <navigationItem key="navigationItem" id="Jj6-vU-wvf"/>
                     <connections>
-                        <segue destination="hGp-W4-dGA" kind="show" id="Ku7-jl-Lw1"/>
+                        <segue destination="hGp-W4-dGA" kind="show" identifier="toEndSession" id="Ku7-jl-Lw1"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tAw-0o-iDD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2504" y="614"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="WpR-ME-Qj3">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hYn-gb-Ek3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="hGp-W4-dGA" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9YT-We-R3z">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
@@ -48,6 +55,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Sas-yX-Kmk"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hYn-gb-Ek3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3381" y="613"/>
         </scene>
