"Pindahin main story board ke  Group Boarding"

--- a/MC1-DailyTImer/Session/Session.storyboard
+++ b/MC1-DailyTImer/Session/Session.storyboard
@@ -48,12 +48,14 @@
             <objects>
                 <viewController id="hGp-W4-dGA" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9YT-We-R3z">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="uYi-gg-uXM"/>
                     </view>
                     <navigationItem key="navigationItem" id="Sas-yX-Kmk"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <splitViewDetailSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hYn-gb-Ek3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
