--- a/MC1-DailyTImer/TaskList/TaskList.storyboard
+++ b/MC1-DailyTImer/TaskList/TaskList.storyboard
@@ -45,7 +45,7 @@
                     <navigationItem key="navigationItem" id="5Bf-zs-JYd"/>
                     <connections>
                         <segue destination="jZf-n4-PHe" kind="show" identifier="toStartSession" id="TjN-OX-P04"/>
-                        <segue destination="ocI-Qf-6OC" kind="show" identifier="toAddTask" id="x6j-Do-aOF"/>
+                        <segue destination="ocI-Qf-6OC" kind="presentation" identifier="toAddTask" id="x6j-Do-aOF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nv1-Hv-yWv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
