"Penambahan fitur set Nama di page dan pull & down keyboard"

--- a/MC1-DailyTImer/BoardingApp/Base.lproj/Main.storyboard
+++ b/MC1-DailyTImer/BoardingApp/Base.lproj/Main.storyboard
@@ -28,6 +28,9 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="WJo-0l-mD9"/>
+                                        </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome to Daily Timer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9wm-Sa-f1N">
                                         <rect key="frame" x="63" y="37" width="205" height="24"/>
@@ -51,12 +54,20 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2hU-mp-03F">
+                                <rect key="frame" x="186" y="660" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="UkG-FX-pVI"/>
                     <connections>
+                        <outlet property="contoh" destination="2hU-mp-03F" id="erF-9l-oU1"/>
                         <outlet property="layoutInputName" destination="wHY-Hu-vkn" id="DTU-JH-tvl"/>
                         <outlet property="saveUsername" destination="Tza-NE-9Gf" id="1m7-Dj-itb"/>
                         <outlet property="username" destination="Lno-Iu-y0U" id="vNQ-Pg-hF2"/>
